# personal-intelligence-system

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: denied_paths.yaml  projects.yaml  sensitivity.yaml
config/initdb/: 01-test-db.sql
docs/: ARCHITECTURE.md  DEPENDENCIES.md
docs/adr/: 0001-event-sourcing-ledger.md  0002-immutable-message-revisions.md  0003-local-capture-daemon.md  0004-postgresql-single-store.md  0005-project-sensitivity-isolation.md  0006-mcp-boundaries-deferred.md
docs/threat-model/: phase0-1.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: pis-core-stack.ts
infra/scripts/: create-service.sh  service-config.sh  update-service.sh
integrations/claude-code/: install-daemon.sh  settings.example.json
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  (+4 more)
scripts/: embed_backfill.sh  extract_all.sh  memory_hygiene.sh  verify_mcp_live.py
tests/: conftest.py  test_acceptance_slice1.py  test_artifact_search.py  test_artifacts.py  test_cloud_runtime.py  test_config.py  test_daemon.py  test_db.py  test_extraction.py  test_github_webhook.py  test_golden_memory.py  test_importer_chatgpt_export.py  test_importer_claude_code.py  test_importer_claude_export.py  test_ingest.py  test_linking.py  test_mcp_server.py  test_normalize_chat.py  test_normalize_claude_code.py  test_oauth.py  test_object_store.py  test_policy.py  test_quickwins.py  test_retrieval.py  test_schemas.py  test_secrets.py  test_semantic_search.py  test_stop_hook.py
(+47 files in other folders)
