[project]
name = "pis"
version = "0.1.0"
description = "Conversation-first personal intelligence system (event ledger + capture + retrieval)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "uvicorn>=0.30",
    "boto3>=1.43.51",
    "python-multipart>=0.0.32",
    "mcp>=1.28,<2",
    "pgvector>=0.5.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
]

[project.scripts]
pis = "pis.cli:main"

[dependency-groups]
dev = [
    "moto[s3]>=5.2.2",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
